# pallet-collator-staking

./: Cargo.toml  README.md
src/: api.rs  benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
src/migrations/: mod.rs  v2.rs
